[workspace]
members = [
    "bin/host",
    "crates/executor/client",
    "crates/executor/host",
    "crates/mpt",
    "crates/primitives",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["puma314", "jtguibas", "rkrasiuk"]
repository = "https://github.com/moongate-forks/minimal-reth"
homepage = "https://github.com/moongate-forks/minimal-reth"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6"
anyhow = { version = "1.0.86", default-features = false }
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"

# workspace
reva-rpc-db = { path = "./crates/storage/rpc-db" }
reva-witness-db = { path = "./crates/storage/witness-db" }
reva-client-executor = { path = "./crates/executor/client" }
reva-host-executor = { path = "./crates/executor/host" }
reva-mpt = { path = "./crates/mpt" }
reva-primitives = { path = "./crates/primitives" }

# reth
reth-primitives = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false, features = [
    "alloy-compat",
    "optimism",
    "std",
    "secp256k1"
] }
reth-codecs = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-consensus = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-evm = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-revm = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false, features = [
    "std",
] }
reth-node-ethereum = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-evm-ethereum = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false, features = [
    "std",
] }
reth-optimism-evm = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false, features = [
    "optimism",
] }
reth-storage-errors = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false, features = [
    "std",
] }
reth-trie = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-trie-common = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-chainspec = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-optimism-chainspec = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-optimism-forks = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-execution-errors = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-execution-types = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-db = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-errors = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false }
reth-optimism-consensus = { git = "https://github.com/lita-xyz/reth", branch = "1.1.1-delendum", default-features = false, features = [
    "optimism",
] }

# revm
revm = { version = "17.0.0", features = [
    "optimism",
    "std",
    "serde",
    "kzg-rs",
], default-features = false }
revm-primitives = { version = "13.0.0", features = [
    "std",
    "serde",
], default-features = false }
revm-inspectors = "0.6"
revm-interpreter = { version = "=10.0.1", default-features = false }
revm-precompile = { version = "=11.0.1", default-features = false }

# alloy
alloy-primitives = { version = "0.8.4", features = ["sha3-keccak"] }
alloy-provider = { version = "0.5.4", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "0.5.4", default-features = false, features = [
    "eth",
] }
alloy-json-rpc = "0.5.4"
alloy-rlp = "0.3.4"
alloy-consensus = { version = "0.5.4", default-features = false }
alloy-transport = { version = "0.5.4" }
alloy-transport-http = { version = "0.5.4", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-eips = { version = "0.5.4", default-features = false }
alloy-trie = "0.5.0"

tower = { version = "0.5", features = ["util"] }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[patch.crates-io]
wait-timeout = { git = "https://github.com/lita-xyz/wait-timeout", branch = "0.2.0-valida" }
rusty-fork = { git = "https://github.com/lita-xyz/rusty-fork", branch = "0.3.0-valida" }
is-terminal = { git = "https://github.com/lita-xyz/is-terminal", branch = "0.4.13-valida" }
cc = { git = "https://github.com/lita-xyz/cc-rs.git", branch = "1.1.18-delendum" }
blst = { git = "https://github.com/lita-xyz/blst.git", branch = "0.3.13-delendum" }
c-kzg = { git = "https://github.com/lita-xyz/c-kzg-4844.git", branch = "1.0.3-delendum" }
zstd-sys = { git = "https://github.com/lita-xyz/zstd-rs.git", branch = "zstd-sys-2.0.13-delendum" }
proptest = { git = "https://github.com/lita-xyz/proptest", branch = "1.5.0-valida" }
pprof = { git = "https://github.com/lita-xyz/pprof-rs", branch = "0.13.0-valida" }
alloy-primitives = { git = "https://github.com/lita-xyz/core" }
alloy-chains = { git = "https://github.com/lita-xyz/chains", branch = "ljr-fix-hex" }
secp256k1 = { git = "https://github.com/lita-xyz/rust-secp256k1.git", branch = "secp256k1-0.29.1-valida", features = ["hashes"] }

