[workspace]
members = [
    "bin/host",
    "crates/executor/client",
    "crates/executor/host",
    "crates/mpt",
    "crates/primitives",
    "crates/provider",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["puma314", "jtguibas", "rkrasiuk"]
repository = "https://github.com/moongate-forks/minimal-reth"
homepage = "https://github.com/moongate-forks/minimal-reth"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
eyre = "0.6"
anyhow = { version = "1.0.86", default-features = false }
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"

# workspace
reva-rpc-db = { path = "./crates/storage/rpc-db" }
reva-witness-db = { path = "./crates/storage/witness-db" }
reva-client-executor = { path = "./crates/executor/client" }
reva-host-executor = { path = "./crates/executor/host" }
reva-mpt = { path = "./crates/mpt" }
reva-primitives = { path = "./crates/primitives" }
reva-provider = { path = "./crates/provider" }

# reth
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false, features = ["secp256k1"] }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false, features = ["serde"] }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.3.10", default-features = false }

# revm
revm = { version = "22.0.1", features = [
    "serde",
    "kzg-rs",
    "secp256k1"
], default-features = false }
revm-bytecode = { version = "3.0.0", default-features = false }
revm-state = { version = "3.0.0", default-features = false }
revm-primitives = { version = "18.0.0", features = [
    "serde",
], default-features = false }
revm-interpreter = { version = "18.0.0", default-features = false }
revm-precompile = { version = "19.0.0", default-features = false, features = ["secp256k1"] }
revm-database-interface = { version = "3.0.0", default-features = false }
op-revm = { version = "3.0.2", default-features = false }

revm-inspectors = "0.19.0"

# alloy
alloy-chains = { version = "0.2.0", default-features = false }
alloy-evm = { version = "0.4.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false, features = ["tiny-keccak", "map-foldhash"] }
alloy-provider = { version = "0.14.0", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "0.14.0", default-features = false, features = [
    "eth",
] }

alloy-json-rpc = { version = "0.14.0", default-features = false }
alloy-genesis = { version = "0.14.0", default-features = false }
alloy-consensus = { version = "0.14.0", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { version = "0.14.0", default-features = false }
alloy-transport = { version = "0.14.0", default-features = false }
alloy-transport-http = { version = "0.14.0", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "0.14.0" }
alloy-rpc-client = { version = "0.14.0", default-features = false }
alloy-eips = { version = "0.14.0", default-features = false }
alloy-rlp = "0.3.10"
alloy-trie = "0.8.1"

# op
alloy-op-evm = { version = "0.4.0", default-features = false }
op-alloy-consensus = "0.13.0"
op-alloy-network = "0.13.0"
op-alloy-rpc-types = "0.13.0"


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[patch.crates-io]
foldhash = { git = "https://github.com/lita-xyz/foldhash", branch = "v0.1.4-valida" }
wait-timeout = { git = "https://github.com/lita-xyz/wait-timeout", branch = "0.2.0-valida" }
rusty-fork = { git = "https://github.com/lita-xyz/rusty-fork", branch = "0.3.0-valida" }
is-terminal = { git = "https://github.com/lita-xyz/is-terminal", branch = "0.4.13-valida" }
cc = { git = "https://github.com/lita-xyz/cc-rs.git", branch = "1.1.18-delendum" }
blst = { git = "https://github.com/lita-xyz/blst.git", branch = "0.3.13-delendum" }
c-kzg = { git = "https://github.com/lita-xyz/c-kzg-4844.git", branch = "1.0.3-delendum" }
zstd-sys = { git = "https://github.com/lita-xyz/zstd-rs.git", branch = "zstd-sys-2.0.13-delendum" }
proptest = { git = "https://github.com/lita-xyz/proptest", branch = "1.5.0-valida" }
pprof = { git = "https://github.com/lita-xyz/pprof-rs", branch = "0.13.0-valida" }
alloy-chains = { git = "https://github.com/lita-xyz/chains", branch = "ljr-fix-hex" }
secp256k1 = { git = "https://github.com/lita-xyz/rust-secp256k1.git", rev = "dcccf7bb5a54da66a130d0d5b2181e88d85fcfb4" }
tiny-keccak = { git = "https://github.com/lita-xyz/tiny-keccak.git" }
